--- a/View/ViewManageOfStudent/StudentManageForm.resx
+++ b/View/ViewManageOfStudent/StudentManageForm.resx
@@ -215,4 +215,38 @@
         fyerrQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="bunifuPanel2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAtMAAAFnCAYAAABkR8XPAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAaOSURBVHhe7dhBasNQFARB3f88up+DFjYYKxAaZ1ZVIND7
+        J2jmAAAAvuA8z8fzc7vdbrfb7Xa73ff39f/y8QAAAPzqrZ/FNAAAAAAA/84yDQAAkZgGAIBITAMAAAAA
+        sGWZBgCASEwDAEAkpgEAAAAA2LJMAwBAJKYBACAS0wAAAAAAbFmmAQAgEtMAABCJaQAAAAAAtizTAAAQ
+        iWkAAIjENAAAAAAAW5ZpAACIxDQAAERiGgAAAACALcs0AABEYhoAACIxDQAAAADAlmUaAAAiMQ0AAJGY
+        BgAAAABgyzINAACRmAYAgEhMAwAAAACwZZkGAIBITAMAQCSmAQAAAADYskwDAEAkpgEAIBLTAAAAAABs
+        WaYBACAS0wAAEIlpAAAAAAC2LNMAABCJaQAAiMQ0AAAAAABblmkAAIjENAAARGIaAAAAAIAtyzQAAERi
+        GgAAIjENAAAAAMCWZRoAACIxDQAAkZgGAAAAAGDLMg0AAJGYBgCASEwDAAAAALBlmQYAgEhMAwBAJKYB
+        AAAAANiyTAMAQCSmAQAgEtMAAAAAAGxZpgEAIBLTAAAQiWkAAAAAALYs0wAAEIlpAACIxDQAAAAAAFuW
+        aQAAiMQ0AABEYhoAAAAAgC3LNAAARGIaAAAiMQ0AAAAAwJZlGgAAIjENAACRmAYAAAAAYMsyDQAAkZgG
+        AIBITAMAAAAAsGWZBgCASEwDAEAkpgEAAAAA2LJMAwBAJKYBACAS0wAAAAAAbFmmAQAgEtMAABCJaQAA
+        AAAAtizTAAAQiWkAAIjENAAAAAAAW5ZpAACIxDQAAERiGgAAAACALcs0AABEYhoAACIxDQAAAADAlmUa
+        AAAiMQ0AAJGYBgAAAABgyzINAACRmAYAgEhMAwAAAACwZZkGAIBITAMAQCSmAQAAAADYskwDAEAkpgEA
+        IBLTAAAAAABsWaYBACAS0wAAEIlpAAAAAAC2LNMAABCJaQAAiMQ0AAAAAABblmkAAIjENAAARGIaAAAA
+        AIAtyzQAAERiGgAAIjENAAAAAMCWZRoAACIxDQAAkZgGAAAAAGDLMg0AAJGYBgCASEwDAAAAALBlmQYA
+        gEhMAwBAJKYBAAAAANiyTAMAQCSmAQAgEtMAAAAAAGxZpgEAIBLTAAAQiWkAAAAAALYs0wAAEIlpAACI
+        xDQAAAAAAFuWaQAAiMQ0AABEYhoAAAAAgC3LNAAARGIaAAAiMQ0AAAAAwJZlGgAAIjENAACRmAYAAAAA
+        YMsyDQAAkZgGAIBITAMAAAAAsGWZBgCASEwDAEAkpgEAAAAA2LJMAwBAJKYBACAS0wAAAAAAbFmmAQAg
+        EtMAABCJaQAAAAAAtizTAAAQiWkAAIjENAAAAAAAW5ZpAACIxDQAAERiGgAAAACALcs0AABEYhoAACIx
+        DQAAAADAlmUaAAAiMQ0AAJGYBgAAAABgyzINAACRmAYAgEhMAwAAAACwZZkGAIBITAMAQCSmAQAAAADY
+        skwDAEAkpgEAIBLTAAAAAABsWaYBACAS0wAAEIlpAAAAAAC2LNMAABCJaQAAiMQ0AAAAAABblmkAAIjE
+        NAAARGIaAAAAAIAtyzQAAERiGgAAIjENAAAAAMCWZRoAACIxDQAAkZgGAAAAAGDLMg0AAJGYBgCASEwD
+        AAAAALBlmQYAgEhMAwBAJKYBAAAAANiyTAMAQCSmAQAgEtMAAAAAAGxZpgEAIBLTAAAQiWkAAAAAALYs
+        0wAAEIlpAACIxDQAAAAAAFuWaQAAiMQ0AABEYhoAAAAAgC3LNAAARGIaAAAiMQ0AAAAAwJZlGgAAIjEN
+        AACRmAYAAAAAYMsyDQAAkZgGAIBITAMAAAAAsGWZBgCASEwDAEAkpgEAAAAA2LJMAwBAJKYBACAS0wAA
+        AAAAbFmmAQAgEtMAABCJaQAAAAAAtizTAAAQiWkAAIjENAAAAAAAW5ZpAACIxDQAAERiGgAAAACALcs0
+        AABEYhoAACIxDQAAAADAlmUaAAAiMQ0AAJGYBgAAAABgyzINAACRmAYAgEhMAwAAAACwZZkGAIBITAMA
+        QCSmAQAAAADYskwDAEAkpgEAIBLTAAAAAABsWaYBACAS0wAAEIlpAAAAAAC2LNMAABCJaQAAiMQ0AAAA
+        AABblmkAAIjENAAARGIaAAAAAIAtyzQAAERiGgAAIjENAAAAAMCWZRoAACIxDQAAkZgGAIBvENMAAPB3
+        t/18PT4/t9vtdrvdbrfbfX9f/wAAQHYcP8mWjAcNJHqHAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
