--- a/View/ViewMangeAll/DashBoardForm.resx
+++ b/View/ViewMangeAll/DashBoardForm.resx
@@ -118,33 +118,49 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="bunifuThinButton21.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="bunifuPanel3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAVsAAADWCAYAAAB/liFfAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAVESURBVHhe7dvPa9d1AMfx/qJuXrx18mQXhSA8aAcJFBbC
-        RCKkg4Qisu0wQTQmlJqobCxIYhhLHMXCbIzYGmxZusE2xSE7DD286/35fluOLSv97nV6POAF4/vr+OTL
-        +/veGysrK8XMzLZ3YmtmFpjYmpkFJrZmZoGJrZlZYGJrZhbYS2O7+Gi53Lg7Uo4Mnin7Lx0vu84dKm+e
-        fsfMzP5cbWJt4+HrJ8uV8Zvl4dLCli2t+8fYfj15p/mg7uHecnNqrPzw+89lfmWpANBSm1jbeGtmvHz0
-        VX/TzBrdrZq6Kba1zMeG+8r71z4py6tP2h8JwL95urbaRPfg1RNlduG3DW3dENsa2j0D3WVocrT9VgD+
-        rztz98q7n31Yph/Mbh3b+o1WaAFeXz1eqOe5m2Jbz2jr0QEAndF7+3I5++3Vv2Nbbx3Ug11ntACds/b8
-        Wdl78WiZuD/dim399awe6gLQWZ9+P1ROjQy0YlvviNWrCwB01vTir83Fgya2u893lbnH8+2nAOiUepSw
-        o2dfK7Y7+w4098MA6Lz632ZNbOsfAGwPsQUIEFuAALEFCBBbgACxBQgQW4AAsQUIEFuAALEFCBBbgACx
-        BQgQW4AAsQUIEFuAALEFCBBbgACxBQgQW4AAsQUIEFuAALEFCBBbgACxBQgQW4AAsQUIEFuAALEFCBBb
-        gACxBQgQW4AAsQUIEFuAALEFCBBbgACxBQgQW4AAsQUIEFuAALEFCBBbgACxBQgQW4AAsQUIEFuAALEF
-        CBBbgACxBQgQW4AAsQUIEFuAALEFCBBbgACxBQgQW4AAsQUIEFuAALEFCBBbgACxBQgQW4AAsQUIEFuA
-        ALEFCBBbgACxBQgQW4AAsQUIEFuAALEFCBBbgACxBQgQW4AAsQUIEFuAALEFCBBbgACxBQgQW4AAsQUI
-        EFuAALEFCBBbgACxBQgQW4AAsQUIEFuAALEFCBBbgACxBQgQW4AAsQUIEFuAALEFCBBbgACxBQgQW4AA
-        sQUIEFuAALEFCBBbgACxBQgQW4AAsQUIEFuAALEFCBBbgACxBQgQW4AAsQUIEFuAALEFCBBbgACxBQgQ
-        W4AAsQUIEFuAALEFCBBbgACxBQgQW4AAsQUIEFuAALEFCBBbgACxBQgQW4AAsQUIEFuAALEFCBBbgACx
-        BQgQW4AAsQUIEFuAALEFCBBbgACxBQgQW4AAsQUIEFuAALEFCBBbgACxBQgQW4AAsQUIEFuAALEFCBBb
-        gACxBQgQW4AAsQUIEFuAALEFCBBbgACxBQgQW4AAsQUIEFuAALEFCBBbgACxBQgQW4AAsQUIEFuAALEF
-        CBBbgACxBQgQW4AAsQUIEFuAALEFCBBbgACxBQgQW4AAsQUIEFuAALEFCBBbgACxBQgQW4CA9dju6NlX
-        1p4/az8MQCetx3bXuUNlfmWp/TAAnbQe24NXT5Q7c/faDwPQKXOP58vu812t2PaPflF6b19uPwVApwxN
-        jpZjw32t2E4/mC1vX/jAuS1Ah3UNni5f/jTaim1dzzefl7Nj19pPA/C6bk6NlSODZ5rGrsd28dFy2X/p
-        eJmYn2m/DIBXtbz6pDkxeLi0sDG2dRP3p8vei0ebA10AXk0N7XtXPi6jU+Prfd0Q27qxX34sewa6y4Xv
-        BttvA+C/ujUz3nyjfTG0dZtiW1ePFE6NDDRlrr+k1UoDsLWna6vN+Wz3cG85fP3k+tHBi9sytn+tlrle
-        WXir/2BzKdfMzDZvZ9+B5oewG3dHtmxp3Utja2ZmnZnYmpkFJrZmZoGJrZlZYGJrZrbtWyl/AGHBIN7v
-        wF5QAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAVQAAAB2CAYAAACXgWs8AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAIBSURBVHhe7dQxSgMBFEXRKV2GpaUgE8s0zthmCZYuw2Wq
+        EbIUdcg0QiCR3PI8OM3n13cwM7N4h8fn2/04vQFwufeH+W7N6HEf43T/NU7fAPzffjPv1pwOw1LZU08A
+        nLc0dM2poAJcQ1ABIoIKEBFUgIigAkQEFSAiqAARQQWICCpARFABIoIKEBFUgIigAkQEFSAiqAARQQWI
+        CCpARFABIoIKEBFUgIigAkQEFSAiqAARQQWICCpARFABIoIKEBFUgIigAkQEFSAiqAARQQWICCpARFAB
+        IoIKEBFUgIigAkQEFSAiqAARQQWICCpARFABIoIKEBFUgIigAkQEFSAiqAARQQWICCpARFABIoIKEBFU
+        gIigAkQEFSAiqAARQQWICCpARFABIoIKEBFUgIigAkQEFSAiqAARQQWICCpARFABIoIKEBFUgIigAkQE
+        FSAiqAARQQWICCpARFABIoIKEBFUgIigAkQEFSAiqAARQQWICCpARFABIoIKEBFUgIigAkQEFSAiqAAR
+        QQWICCpARFABIoIKEBFUgIigAkQEFSAiqAARQQWICCpARFABIoIKEBFUgIigAkQEFSAiqAARQQWICCpA
+        RFABIoIKEBFUgIigAkQEFSAiqACRv0HdzLtTTwCc9zk+va45Pe73+LJUFoDLLTE9bLc3a0rNzOz6DcMP
+        Itpzcng3REwAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="bunifuPanel2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAVQAAAB2CAYAAACXgWs8AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAIDSURBVHhe7dYxTgIBFEVRSnehlQNW7sDGwZYlWLoMdmLj
+        OMtUCNOYkCDhluclp/v1zV+ZmVm8YX57GOZxD8D/PU7b9ZLR056+xuf1PP4AcL3NtN0tOT1+p+P+3BEA
+        lx0buuRUUAFuIagAEUEFiAgqQERQASKCChARVICIoAJEBBUgIqgAEUEFiAgqQERQASKCChARVICIoAJE
+        BBUgIqgAEUEFiAgqQERQASKCChARVICIoAJEBBUgIqgAEUEFiAgqQERQASKCChARVICIoAJEBBUgIqgA
+        EUEFiAgqQERQASKCChARVICIoAJEBBUgIqgAEUEFiAgqQERQASKCChARVICIoAJEBBUgIqgAEUEFiAgq
+        QERQASKCChARVICIoAJEBBUgIqgAEUEFiAgqQERQASKCChARVICIoAJEBBUgIqgAEUEFiAgqQERQASKC
+        ChARVICIoAJEBBUgIqgAEUEFiAgqQERQASKCChARVICIoAJEBBUgIqgAEUEFiAgqQERQASKCChARVICI
+        oAJEBBUgIqgAEUEFiAgqQERQASKCChARVICIoAJEBBUgIqgAEUEFiAgqQERQASKCChARVICIoAJEBBUg
+        IqgAEUEFiAgqQERQASKCChARVIDIn6Bupu3u3BEAlw3frx9LTk87FPb9WFkArnCI6f3ny92SUjMzu32r
+        1S8SCPVt+evAwAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="panelShowUser.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAVQAAAB2CAYAAACXgWs8AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAIESURBVHhe7daxTcMAFEXRlCyALSooKRklI1AyBptY8RI2
+        FaNBQlxQRCIotzxPOt2vr/7OzMzijdPyNB6WdwCu9zCtz1tGz7ufPl7Gef0C4P+Ged1vOT1+p6fSXjgC
+        4ArHhm45FVSAmwgqQERQASKCChARVICIoAJEBBUgIqgAEUEFiAgqQERQASKCChARVICIoAJEBBUgIqgA
+        EUEFiAgqQERQASKCChARVICIoAJEBBUgIqgAEUEFiAgqQERQASKCChARVICIoAJEBBUgIqgAEUEFiAgq
+        QERQASKCChARVICIoAJEBBUgIqgAEUEFiAgqQERQASKCChARVICIoAJEBBUgIqgAEUEFiAgqQERQASKC
+        ChARVICIoAJEBBUgIqgAEUEFiAgqQERQASKCChARVICIoAJEBBUgIqgAEUEFiAgqQERQASKCChARVICI
+        oAJEBBUgIqgAEUEFiAgqQERQASKCChARVICIoAJEBBUgIqgAEUEFiAgqQERQASKCChARVICIoAJEBBUg
+        IqgAEUEFiAgqQERQASKCChARVICIoAJEBBUgIqgAEUEFiAgqQERQASKCChARVICIoAJEBBUgIqgAEUEF
+        iAgqQERQASKCChARVICIoAJEBBUg8juow7zuLx4B8KfhsLxtOT1vnJfXn08VgKudYvo4fd5tKTUzs9u3
+        230D1eOXxQdiErIAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
